<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/set_ip"
        android:title="@string/set_ip_title" />
<!--
    <item
        android:id="@+id/set_video_port"
        android:title="Set video port" />
-->
    <item
        android:id="@+id/preferences"
        android:title="@string/action_preferences_label" />
    <item
        android:id="@+id/help"
        android:title="@string/action_help_label" />
    <item
        android:id="@+id/other_apps"
        android:title="@string/action_other_apps_label" />
    <item
        android:id="@+id/source_code"
        android:title="@string/action_source_code_label" />
    <item
        android:id="@+id/exit"
        android:title="@string/exit" />
</menu>
